--- a/styles.css
+++ b/styles.css
@@ -2313,4 +2313,92 @@ a.header-link.login-link.sj-text-sign-in {
 	}
 }
 
+/* Right navigation - Filters */
+
+.catalog-left-nav-wrapper .back-to-catalog {
+    display: none;
+}
+.catalog-left-nav-wrapper #catalog-filter-expand-collapse{
+    display: none;
+}
+.catalog-left-nav-wrapper #catalog-reset{
+    background: none !important;
+    color: #f66135!important;
+    float: none!important;
+    font-size: 14px;
+    line-height: 1.5!important;
+    font-weight: 400!important;
+    display: inline-block!important;
+    padding: 0!important;
+    margin: 0!important;
+		text-decoration: underline;
+}
+
+.catalog-left-nav-wrapper .filter-results{
+    display: none;
+}
+
+.filter-option-tag:not(.checked) i.fa-check-circle {
+    display: none!important;
+}
+.filter-option-tag:hover .fa-circle-o, .filter-option-tag:active .fa-circle-o, .filter-option-tag:hover .filter-counter, .filter-option-tag:active .filter-counter{
+	color: #5D747A!important;
+}
+.filter-option-tag:hover .filter-name, .filter-option-tag:active .filter-name{
+	color: #F66135!important;
+}
+
+.filter-name {
+    color: #5D747A!important;
+    font-size: .8125rem;
+    line-height: 1.5rem;
+}
+.filter-counter {
+    opacity: .65!important;
+}
+
+.tag-labels {
+    margin: 1rem 0 2.5rem!important;
+    max-width: 100%!impotant;
+    padding: 0!important;
+}
+
+.catalog-filter-menu h3{
+    color: #313131!important;
+    font-size: .875rem!important;
+    font-weight: 500!important;
+    line-height: 1rem !important;
+    letter-spacing: 1.5px;
+}
+.catalog-filter-menu hr {
+    display: none;
+}
+.view-results {
+	  font-size: .875rem!important;
+    text-decoration: underline;
+}
+
+#main-container.catalog-filters .search #catalog-search-info{
+	margin-top: -1.5rem;
+}
+#header-left .header-link .fa-bars:before {
+    background: center center no-repeat url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 24.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 30 24' style='enable-background:new 0 0 30 24;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:%235D747A;%7D%0A%3C/style%3E%3Crect x='3' y='6' class='st0' width='18' height='2'/%3E%3Crect x='6' y='11' class='st0' width='12' height='2'/%3E%3Crect x='9' y='16' class='st0' width='6' height='2'/%3E%3C/svg%3E%0A");
+    content: '';
+    display: inline-block;
+    width: 30px;
+    height: 1.5rem;
+}
+
+@media only screen and (min-width: 350px){
+	#catalog-left-nav.cbp-spmenu-vertical {
+    width: 280px;
+    box-shadow: 1px 15px 15px 0 rgb(0 0 0 / 8%), inset 0 1px 0 rgb(0 0 0 / 8%);
+	}
+}
+@media only screen and (min-width: 875px){
+	.catalog-filters #skilljar-content, .catalog-filters #ep-footer {
+	    margin-left: 280px;
+	}
+}
+
 </style>
