Adds training CSS

--- a/training.css
+++ b/training.css
@@ -2045,7 +2045,7 @@ body.sj-page-catalog-root #header .header-left {
 }
 
 .sj-page-catalog-root .catalog-center-width.one-col-full {
-	background: linear-gradient(105deg, #A843F2 0%, #8ADEF8 100%);
+	background: linear-gradient(105deg, #fbab7e 0%, #F7ce68 100%);
 	padding: 0 !important;
 	margin: -24px 0 0 !important;
 	width: 100%;
